apps/website/resources/migration-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: engiqueers-migration
  namespace: website
  annotations:
    cert-manager.io/issuer: selfsigned-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - name: engiqueers-migration-tls
      hostname: "engiqueers.ecaconcordia.ca"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: engiqueers-migration-tls
    - name: engiqueers-migration
      port: 80
      protocol: HTTP
      hostname: "engiqueers.ecaconcordia.ca"
