apps/website/resources/migration-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: website
    app.kubernetes.io/name: website-migration
  name: website-migration
  namespace: website
spec:
  hostnames:
    - engiqueers.ecaconcordia.ca
  parentRefs:
    - name: engiqueers
      namespace: ingress
    - name: engiqueers-insecure
      namespace: ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: "engiqueersconcordia.ca"
            statusCode: 301
