apps/website/resources/redirect-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: website
    app.kubernetes.io/name: website-redirect
  name: website-redirect
spec:
  hostnames:
    - www.engiqueersconcordia.ca
  parentRefs:
    - name: engiqueers
      namespace: ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: "engiqueersconcordia.ca"
            statusCode: 301
